# epyrunner

./: .gitignore  CITATION.cff  Installing_EPOCH.md  LICENCE  README.md  pyproject.toml  random_sampling.py  template.deck  template.sh  template_default.sh  train.py
.github/workflows/: black.yml  lint.yml
src/epyrunner/: __init__.py  _version.py
